--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,4 +10,26 @@ canvas {
   height: 100%;
   margin: 0 auto;
   display: block;
+  opacity: 0;
+  transition: all 2s linear;
 }
+
+/* Image Loading */
+#loading {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+#loader {
+  width: 100px;
+  height: auto;
+}
+#loader.animate {
+	-webkit-animation:spin 3s linear infinite;
+	-moz-animation:spin 3s linear infinite;
+	animation:spin 3s linear infinite;
+}
+@-moz-keyframes spin { 50%, 100% { -moz-transform: rotateY(360deg); } }
+@-webkit-keyframes spin { 50%, 100% { -webkit-transform: rotateY(360deg); } }
+@keyframes spin { 50%, 100% { -webkit-transform: rotateY(360deg); transform:rotateY(360deg); } }
